# trendspy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: basic_usage.ipynb
src/trendspy/: __init__.py  client.py  constants.py  converter.py  hierarchical_search.py  news_article.py  timeframe_utils.py  trend_keyword.py  trend_list.py  utils.py
tests/: timeframe_utils_test.py
